# targeter

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: files.rs  main.rs  opt.rs  util.rs
